--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,16 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+    /* background-image: url("../images/20180818_124330small-min.png");
+    background-repeat: no-repeat;
+    background-size: stretch;
+    position: fixed; */
+}
+#bg-img01 {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: -10;
 }
 
 .main-header {
@@ -18,7 +28,7 @@ body {
     top: 0;
     width: 100vw;
     padding-bottom: 0px;
-    box-shadow:  0 0 5px #e4f2d1, 0 0 15px #e8e8de;
+    /* box-shadow:  0 0 5px #e4f2d1, 0 0 15px #e8e8de; */
     z-index: 1;
 }
 
@@ -67,10 +77,31 @@ span.fish a:link, span.fish a:visited {
 .main {
     /*margin-top: 300px;*/
     margin-top: 20px;
+    background-color: #aaa39baa;
+    border-radius: 20px;
+    /* opacity: 0.3; */
 }
 
 .main-row {
     padding: 0 20px;
+}
+
+.sectionTitle {
+    background-color: white;
+    text-align: center;
+    /* position: absolute; */
+}
+.sectionTitle::after {
+    background-color: #aaa39b;
+    content: "";
+    width: 100%;
+    height: 100px;
+    display: block;
+    position: relative;
+    top: -95px;
+    z-index: -1;
+    border-radius: 20px;
+    opacity: 0.5;
 }
 
 /* Cards Set Up */
