--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,77 @@ body {
     z-index: -10;
 }
 
+#hackIcon {
+    width: 140px;
+    height: 140px;
+}
+
+#hackathonImage {
+    width: 100%;
+}
+
+/* MODAL */
+.modal-content {
+    position: relative;
+    margin: 40px auto;
+    border-radius: 2px;
+    border: 0;
+    box-shadow: 0 2px 7px -2px rgba(0,0,0,0.5);
+}
+
+.modal-content::before,
+.modal-content::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    width: 40%;
+    height: 20%;
+    z-index: -1;
+}
+
+.modal-content::before {
+    transition: all 0.15s ease-in-out;
+    left: 20px;
+    -webkit-transform: skew(-5deg) rotate(-5deg);
+        -ms-transform: skew(-5deg) rotate(-5deg);
+            transform: skew(-5deg) rotate(-5deg);
+    box-shadow: 0 7px 15px 0 rgba(0,0,0,0.6),
+                5px 15px 30px 0 rgba(0,0,0,0.4);
+}
+
+.modal-content::after {
+    transition: all 0.25s ease-in-out;
+    right: 15px;
+    -webkit-transform: skew(5deg) rotate(5deg);
+        -ms-transform: skew(5deg) rotate(5deg);
+            transform: skew(5deg) rotate(5deg);
+    box-shadow: 0 10px 15px 0 rgba(0,0,0,0.6),
+                -5px 20px 30px 0 rgba(0,0,0,0.4);
+}
+
+.modal-content:hover::before{
+    left: 2px;
+    -webkit-transform: skew(-2deg) rotate(-2deg) translateY(5px);
+        -ms-transform: skew(-2deg) rotate(-2deg) translateY(5px);
+            transform: skew(-2deg) rotate(-2deg) translateY(5px);
+    box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.5);
+}
+
+.modal-content:hover::after{
+    right: 2px;
+    -webkit-transform: skew(2deg) rotate(2deg) translateY(5px);
+        -ms-transform: skew(2deg) rotate(2deg) translateY(5px);
+            transform: skew(2deg) rotate(2deg) translateY(5px);
+    box-shadow: 0px 5px 5px 0 rgba(0,0,0,0.5);
+}
+
+
+
+
+
+
+
+
 .main-header {
     position: static;
     /*background: #cbaad0;*/
